@@ -1,5 +1,7 @@
 2003-07-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/download/index.html: Add Debian unstable/testing.
+
 	* site/about/applications/index.html: Remove /input from doc urls.
 
 2003-07-30  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
